<resources>
    <string name="app_name">Appostados</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Tablero</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="error_invalid_username">Nombre de usuario inválido.</string>
    <string name="error_invalid_password">Contraseña inválida.</string>
    <string name="error_invalid_credentials">Error en el login</string>

    <string name="login_failed">Inicio de sesión fallido</string>
    <string name="title_activity_login">Appostados</string>
    <string name="title_activity_home_user">HomeUser</string>
    <string name="title_activity_deportes_admin">DeportesAdminActivity</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="age">Age</string>

    <string name="register_title">Registro</string>
    <string name="userName">Nombre</string>
    <string name="last_names">Apellido/s</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirme su contraseña </string>
    <string name="register">Registrar</string>
    <string name="profile_picture">Foto de perfil(opcional)</string>
    <string name="error_network_error">Error de red. Por favor, verifica tu conexión a Internet e intenta nuevamente.</string>


    <string name="edit_button_description">Editar</string>
    <string name="delete_button_description">Eliminar</string>
</resources>